Fix anchor links hidden behind toolbar 3

--- a/quantecon_book_theme/scss/quantecon-book-theme.scss
+++ b/quantecon_book_theme/scss/quantecon-book-theme.scss
@@ -149,7 +149,8 @@ body {
 }
 
 .section, .reference, .math {
-  scroll-margin-top: 60px;
+  padding-top: 60px;
+  margin-top: -60px;
 }
 
 h1 {
